修正昨晚的bug，是由于diary命名的冲突，完成写日志和过往日志功能。主页未完善。

--- a/mydiary/templates/base.html
+++ b/mydiary/templates/base.html
@@ -13,10 +13,13 @@
 <div class="container">
 <div class="header">
 	<div class="logo">
+	<a href="http://127.0.0.1:8000"><img src="/static/img/logo.png" alt="时光里"></a>
 	</div>
 	<div class="account">
 		<ul class="menu green-link">
 			{% if request.user.is_authenticated %}
+			<li><a href="http://127.0.0.1:8000/diary/write/">写日志</a></li>
+			<li><a href="http://127.0.0.1:8000/diary/past/">过往日志</a></li>
 			<li><a href="http://127.0.0.1:8000/accounts/profile/">{{ request.user }}的帐号</a></li>
 			<li><a href="http://127.0.0.1:8000/accounts/logout/">登出</a></li>
 			{% else %}
