--- a/static/css/base.css
+++ b/static/css/base.css
@@ -323,6 +323,17 @@ h2
 	margin-bottom:10px;
 }
 
+.mgn-top30
+{
+	margin-top:30px;
+}
+
+.mgn-btm30
+{
+	margin-bottom:30px;
+}
+
+
 .mgn-top20
 {
 	margin-top:20px;
