修正bug，并添加注册邀请码。

--- a/mydiary/templates/accounts/editpassword.html
+++ b/mydiary/templates/accounts/editpassword.html
@@ -13,7 +13,7 @@
 {% if editpassword_success %}
 <p style="margin-top:20px;color:#060;font-size:20px;">{{ request.user.name }}，你已成功修改密码 :)</p>
 <span class="blue-link">
-<a href="http://127.0.0.1:8000/accounts/profile/">回到我的个人资料页</a>
+<a href="{{ request.HOME_PAGE_URL }}accounts/profile/">回到我的个人资料页</a>
 </span>
 {% else %}
 <form name="form" method="post" action="">{% csrf_token %}
