--- a/mydiary/templates/accounts/profile.html
+++ b/mydiary/templates/accounts/profile.html
@@ -35,7 +35,7 @@
 	<div class="item">
     <label>登录密码:</label>
 	<span class="user-info blue-link">
-	<a href="http://127.0.0.1:8000/accounts/editpassword/">更改</a>
+	<a href="{{ request.HOME_PAGE_URL }}accounts/editpassword/">更改</a>
 	</span>
     </div>
 	
