--- a/mydiary/templates/base_basic.html
+++ b/mydiary/templates/base_basic.html
@@ -13,6 +13,7 @@
 <div class="container">
 <div class="header">
 	<div class="logo">
+	<a href="{{ request.HOME_PAGE_URL }}"><img src="/static/img/logo.png" alt="时光里"></a>
 	</div>
 </div>
 <div class="content">
