--- a/mydiary/templates/index.html
+++ b/mydiary/templates/index.html
@@ -1,15 +1,10 @@
 {% extends "base.html" %}
-{% block title %}diarylife{% endblock %}
+{% block title %}时光里{% endblock %}
 
 {% block headerlink %}
-
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 {% endblock %}
-
 {% block content %}
 <div class="fleft" style="margin:15px auto;">	
-
-	
-
 </div>
 {% endblock %}
