更新代码，添加过往日志右侧的归档栏，修正登录模块的一些代码。

--- a/mydiary/templates/accounts/editpassword.html
+++ b/mydiary/templates/accounts/editpassword.html
@@ -30,14 +30,18 @@
     <div class="item">
     <label>新密码</label>
     <input id="password" name="new_password1" type="password" class="basic-input" maxlength="20">
+    {% if form_val.password1_val_error %}
+    <span class="validate-error">{{form_val.password1_error}}</span>
+    {% else %}
     <span class="tip">字母、数字或符号，最短6个字符，区分大小写</span>
+    {% endif %}
     </div>
     
     <div class="item">
     <label>确认密码</label>
     <input id="password" name="new_password2" type="password" class="basic-input" maxlength="20">
-    {% if password_notMatch %}
-    <span class="validate-error">两次输入的密码不一致</span>
+    {% if form_val.password2_val_error %}
+    <span class="validate-error">{{form_val.password2_error}}</span>
     {% else %}
     <span class="tip">请再次输入密码</span>
     {% endif %}
