--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -14,7 +14,7 @@
     {% if login_failed %}
     <div class="item">
     <label>&nbsp;</label>
-    <span class="validate-error" style="margin-left:0;">你的email和密码不符，请再试一次</span>
+    <span class="validate-error" style="margin-left:0;">你的邮箱和密码不符，请再试一次</span>
     </div>
     {% endif %}
     
