--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,7 +17,7 @@ body
 .header
 {
 	float:left;
-	padding-bottom:10px;
+	padding-bottom:5px;
 	border-bottom:1px dashed #CCC; /*画一条浅灰色虚线*/
 	width:inherit;
 	height:35px;
@@ -63,8 +63,8 @@ a img:hover{border: none;}
 {
 	clear:both;/*清除左右的浮动*/
 	float:left;
-	min-height:420px;
-	margin:0 auto;
+	min-height:350px;
+	margin:20px auto;
 	width:950px;
 	/*border:1px dashed #0EE;*/
 }
@@ -72,13 +72,11 @@ a img:hover{border: none;}
 
 .content-area
 {
-	margin:20px auto;
 	margin-bottom:50px;
 }
 
 .footer
 {
-
 	clear:both;
 	padding-top:5px;
 	padding-bottom:15px;
@@ -174,10 +172,10 @@ h1
 	font-size: 25px;
 	font-weight: bold;
 	color: #494949;
-	/*margin-bottom:30px;*/
-	/*border:1px dashed #000;*/
-	padding: 0 0 15px 0;
+	padding-bottom:15px;
 	line-height: 1.1;
+	font-family:Arial,Helvetica,sans-serif;
+	margin-top:10px;
 }
 
 h2
@@ -186,7 +184,8 @@ h2
 	font-size: 20px;
 	font-weight: bold;
 	color:#595959;
-	padding: 0 0 15px 0;
+	margin-top:0px;
+	padding-bottom:15px;
 	line-height: 1.1;
 }
 
@@ -194,8 +193,7 @@ h2
 {
 	cursor: pointer;
 	font-size: 14px;
-	font-weight: bold;
-	padding: 6px 26px;
+	padding: 5px 20px;
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -235,6 +233,49 @@ h2
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
 	border: 1px solid #C9C9C9;
+}
+
+
+.bn-flat {
+
+display: -moz-inline-box;
+display: inline-block;
+border-width: 1px;
+border-style: solid;
+border-color: #BBB #BBB #999;
+color: #444;
+border-radius: 3px;
+-moz-border-radius: 3px;
+-webkit-border-radius: 3px;
+overflow: hidden;
+vertical-align: middle;
+}
+
+.bn-flat input 
+{
+border: 0;
+height: 25px;
+padding: 0 14px;
+color: #333;
+
+font-size: 12px;
+margin: 0!important;
+cursor: pointer;
+-webkit-appearance: none;
+border-radius: 2px;
+-moz-border-radius: 2px;
+-webkit-border-radius: 2px;
+background-image: -moz-linear-gradient(-90deg,#FCFCFC 0,#E9E9E9 100%);
+background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#FCFCFC),color-stop(1,#E9E9E9));
+}
+
+.bn-flat input:hover, .bn-flat input:focus, .bn-flat-over input 
+{
+color: #333!important;
+background-color: transparent!important;
+
+background-image: -moz-linear-gradient(-90deg,#F8F8F8 0,#DDD 100%);
+background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#F8F8F8),color-stop(1,#DDD));
 }
 
 .mgn-top10
